Alignment fix

--- a/src/Component/HomeComponents/About/About.css
+++ b/src/Component/HomeComponents/About/About.css
@@ -7,12 +7,12 @@
   
 }
   .ABOUT {
-    width: 3.5em;
-    margin-left: 3em;
-    padding: 1vw;
+    width: 3.7em;
+    margin-left: 6em;
+    padding: .3vw;
     border-bottom: 3px solid #821169;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.5vw;
+    font-size: 1.3vw;
     color: #fff;
   }
 
